# Nanopoly

./: .oral-safety-polytope.aln  Cargo.toml  Qwen_rust_20260216_aayuri6af.rs  Qwen_rust_20260216_ni7lcaxij.rs  README.md
.github/workflows/: nanopoly-ci.yml
ai_guard/: admin_action_guard.rs
config/: tobacco_detox_phases.toml
docs/: nanopoly-evolution-and-cybernetic-biocompatibility.md
schemas/: oral-telemetry-nexusSample.schema.json
src/: lib.rs  xr.rs
store/: metrics.rs  mod.rs  upgrade_store.rs  upgrade_store_canine.rs
xr-lab-grid/: mod.rs
xr-lab-grid/memory/: metrics.rs  object.rs  rewrite.rs
xr-lab-grid/nanopoly/: canine_governance_layer.rs  canine_lifeforce.rs  canine_policy.rs  governance_canine.rs  mod.rs  nanopolygon.rs  nanosotin_polytope_tobacco.rs  nanoswarm.rs  species.rs
xr-lab-grid/nanopoly/core/: animal_welfare.rs  governance.rs  nanopoly_object.rs  species.rs
xr-lab-grid/nanopoly/store/: upgradestore.rs
xr-lab-grid/nanopoly/swarm/: nanoswarm.rs
xr-lab-grid/safety-core/src/: ml_bridge.rs  policy.rs  policy_engine.rs  tsafe_cortex_gate.rs  types.rs
xr-lab-grid/xr_nav/: xr_nav_controller.rs
xr-lab-grid/xrgrid/: cell.rs  planning_swarm.rs
